--- a/DOMform/form.html
+++ b/DOMform/form.html
@@ -6,18 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FORMULÁRIO</title>
     <style>
+      body,
+      html {
+        height: 100%;
+        margin: 0;
+        background-color: lavender;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+
+      .container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
       .dados {
         margin: 2px;
       }
 
       .form {
-        width: 50%;
+        width: 200%;
+        max-width: 650px;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
       }
     </style>
   </head>
 
   <body>
-    <main>
+    <main class="container">
       <h1>Formulário</h1>
 
       <form class="form" id="form-dados">
